Expand lowercase link normalization coverage

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -30,6 +30,13 @@ patterns:
     - ".js"
     - ".php"
     - ".txt"
+    - ".json"
+    - ".xml"
+    - ".yml"
+    - ".yaml"
+    - ".md"
+    - ".markdown"
+    - ".svg"
   ignore_prefixes:
     - "http://"
     - "https://"
